--- a/ErsatzTV/Pages/FFmpegEditor.razor
+++ b/ErsatzTV/Pages/FFmpegEditor.razor
@@ -55,6 +55,7 @@
                 <MudSelectItem Value="@ScalingBehavior.ScaleAndPad">Scale and Pad</MudSelectItem>
                 <MudSelectItem Value="@ScalingBehavior.Stretch">Stretch</MudSelectItem>
                 <MudSelectItem Value="@ScalingBehavior.Crop">Crop</MudSelectItem>
+                <MudSelectItem Value="@ScalingBehavior.Scale">Scale</MudSelectItem>
             </MudSelect>
         </MudStack>
         <MudText Typo="Typo.h5" Class="mt-10 mb-2">Video</MudText>
